Added images locally.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <tr>
                         <td align="center" valign="top" class="mobile-fluid">
                             <img alt="logo" class="mobile-center"
-                                src="http://www.rmu.gallery/js-internal-email/logo.png">
+                                src="http://www.rmu.gallery/js-internal-email/logo.jpg">
                         </td>
                     </tr>
                 </table>
@@ -93,7 +93,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="youtube" src="http://www.rmu.gallery/js-internal-email/youtube.png">
+                            <img width="100%" alt="youtube" src="http://www.rmu.gallery/js-internal-email/youtube.jpg">
                         </td>
                     </tr>
 
@@ -147,7 +147,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="kim" src="http://www.rmu.gallery/js-internal-email/kim.png">
+                            <img width="100%" alt="kim" src="http://www.rmu.gallery/js-internal-email/kim.jpg">
                         </td>
                     </tr>
 
@@ -196,7 +196,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="sara" src="http://www.rmu.gallery/js-internal-email/sara.png">
+                            <img width="100%" alt="sara" src="http://www.rmu.gallery/js-internal-email/sara.jpg">
                         </td>
                     </tr>
 
@@ -224,7 +224,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/laptop.png">
+                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/laptop.jpg">
                         </td>
                     </tr>
                 </table>
@@ -258,7 +258,7 @@
 
                     <tr bgcolor="#19042d">
                         <td align="center" class="hide" valign="top">
-                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/footer.png">
+                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/footer.jpg">
                         </td>
                     </tr>
 
