Optimized code formatting.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         table td {
             border-collapse: collapse;
-            outline: 1px dashed red !important;
+            /* outline: 1px dashed red !important; */
         }
         a {
             color: #6EE5B9 !important;
@@ -78,7 +78,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             <span>
                                 Your Trusted YouTube <br> Creative Partner
                             </span>
@@ -104,17 +104,17 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td valign="top" style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5;">
+                        <td valign="top"
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
                             <p>Exciting news!</p>
                             <p>Joystick is officially a YouTube creative partner. We're applying our expertise in
-                                building
-                                impactful digital campaigns to the YouTube platform and custom video creative.</p>
+                                building impactful digital campaigns to the YouTube platform and custom video creative.
+                            </p>
                             <p>Whether you have existing video assets, or are looking to create an original animated
-                                spot,
-                                our team of talented designers and producers will create action-driving YouTube
-                                video ads
-                                tailored to your brand needs. Check out some of our work here:</p>
-                            <p><a href="joystickinteractive.com/youtube">joystickinteractive.com/youtube</a></p>
+                                spot, our team of talented designers and producers will create action-driving YouTube
+                                video ads tailored to your brand needs. Check out some of our work here:</p>
+                            <p><a href="joystickinteractive.com/youtube"
+                                    style="color: #6EE5B9;">joystickinteractive.com/youtube</a></p>
                         </td>
                     </tr>
                 </table>
@@ -132,7 +132,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             <span>
                                 Kim Havens joins as <br> VP, Content Production
                             </span>
@@ -158,14 +158,12 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td valign="top" style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5;">
+                        <td valign="top"
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
                             <p>Kim Havens comes to us from Lions Gate with a difficult-to-find combination of skill
-                                sets:
-                                deep knowledge of the art of storytelling combined with a broader digital savvy that
-                                make
-                                her invaluable to clients. She's already been adding value to our work on several
-                                fronts
-                                with clients and partners, not to mention our YouTube partnership. </p>
+                                sets: deep knowledge of the art of storytelling combined with a broader digital savvy
+                                that make her invaluable to clients. She's already been adding value to our work on
+                                several fronts with clients and partners, not to mention our YouTube partnership.</p>
                             <p>Welcome!</p>
                         </td>
                     </tr>
@@ -175,6 +173,7 @@
 
                 <!-- Sara -->
                 <table border="0" cellpadding="0" cellspacing="0">
+
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
                         <td height="40"></td>
@@ -183,7 +182,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             Much more to come!
                         </td>
                     </tr>
@@ -207,12 +206,13 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td valign="top" style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5;">
-                            <p>We've been hard at work with new and emerging technology. Some of our projects
-                                include work in augmented reality, voice-enabled and visual search experiences.
-                                We're excited to see them launch and even win awards. On the horizon are several
-                                more innovations we can't wait to share with you. As always, keep up with us on our
-                                social feeds! (links in the footer).</p>
+                        <td valign="top"
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
+                            <p>We've been hard at work with new and emerging technology. Some of our projects include
+                                work in augmented reality, voice-enabled and visual search experiences. We're excited to
+                                see them launch and even win awards. On the horizon are several more innovations we
+                                can't wait to share with you. As always, keep up with us on our social feeds! (links in
+                                the footer).</p>
                         </td>
                     </tr>
 
@@ -242,11 +242,13 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <span style="font-family: 'Playfair Display', serif; font-size: 2.25em;">
-                                <i>Get in touch,</i></span> <br>
+                            <span style="font-family: 'Playfair Display', serif; font-size: 2.25em; color: #000000;">
+                                <i>Get in touch,</i>
+                            </span> <br>
                             <span
-                                style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1;">We'd
-                                love to hear from you</span>
+                                style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                                We'd love to hear from you
+                            </span>
                         </td>
                     </tr>
 
@@ -270,7 +272,7 @@
 
                     <tr>
                         <td valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 1.5em; font-weight: 700; text-align: center;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.5em; font-weight: 700; text-align: center; color: #000000;">
                             Connect With Us
                         </td>
                     </tr>
@@ -299,9 +301,10 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td valign="top" style="font-family: 'Roboto', sans-serif; font-size: 1em; text-align: center;">
+                        <td valign="top"
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; text-align: center; color: #000000;">
                             <p>We're happy you're here, but if you don't want to hear from us you can </p>
-                            <a href="#">Unsubscribe</a>
+                            <a href="#" style="color: #6EE5B9;">Unsubscribe</a>
                         </td>
                     </tr>
                 </table>
