--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         @media screen and (max-width: 630px) {
             br {
-                display: none !important;
+                /* display: none !important; */
             }
         }
         @media screen and (min-width: 630px) {
@@ -72,7 +72,7 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
+                        <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
@@ -80,14 +80,14 @@
                         <td align="center" valign="top"
                             style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             <span>
-                                Your Trusted YouTube <br> Creative Partner
+                                Your Trusted <br> YouTube Creative Partner
                             </span>
                         </td>
                     </tr>
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="20"></td>
+                        <td height="40"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
@@ -126,21 +126,6 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
-                    </tr>
-                    <!--------------------------------------------------------- Spacer -->
-
-                    <tr>
-                        <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
-                            <span>
-                                Kim Havens joins as <br> VP, Content Production
-                            </span>
-                        </td>
-                    </tr>
-
-                    <!--------------------------------------------------------- Spacer -->
-                    <tr>
                         <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
@@ -176,19 +161,6 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
-                    </tr>
-                    <!--------------------------------------------------------- Spacer -->
-
-                    <tr>
-                        <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
-                            Much more to come!
-                        </td>
-                    </tr>
-
-                    <!--------------------------------------------------------- Spacer -->
-                    <tr>
                         <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
@@ -209,7 +181,8 @@
                         <td valign="top"
                             style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
                             <p>We've been hard at work with new and emerging technology. Some of our projects include
-                                work in augmented reality, voice-enabled and visual search experiences. We're excited to
+                                work in augmented reality, voice-enabled and visual search experiences.</p>
+                            <p>We're excited to
                                 see them launch and even win awards. On the horizon are several more innovations we
                                 can't wait to share with you. As always, keep up with us on our social feeds! (links in
                                 the footer).</p>
@@ -218,7 +191,7 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
+                        <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
@@ -233,36 +206,6 @@
 
                 <!-- Footer -->
                 <table border="0" cellpadding="0" cellspacing="0">
-
-                    <!--------------------------------------------------------- Spacer -->
-                    <tr>
-                        <td height="40"></td>
-                    </tr>
-                    <!--------------------------------------------------------- Spacer -->
-
-                    <tr>
-                        <td align="center" valign="top">
-                            <span style="font-family: 'Playfair Display', serif; font-size: 2.25em; color: #000000;">
-                                <i>Get in touch,</i>
-                            </span> <br>
-                            <span
-                                style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
-                                We'd love to hear from you
-                            </span>
-                        </td>
-                    </tr>
-
-                    <!--------------------------------------------------------- Spacer -->
-                    <tr>
-                        <td height="40"></td>
-                    </tr>
-                    <!--------------------------------------------------------- Spacer -->
-
-                    <tr bgcolor="#19042d">
-                        <td align="center" class="hide" valign="top">
-                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/footer.jpg">
-                        </td>
-                    </tr>
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
@@ -303,8 +246,7 @@
                     <tr>
                         <td valign="top"
                             style="font-family: 'Roboto', sans-serif; font-size: 1em; text-align: center; color: #000000;">
-                            <p>We're happy you're here, but if you don't want to hear from us you can </p>
-                            <a href="#" style="color: #6EE5B9;">Unsubscribe</a>
+                            <p><a href="#" style="color: #6EE5B9;">Unsubscribe</a></p>
                         </td>
                     </tr>
                 </table>
