Re-added section headers. - also updated youtube image.

--- a/index.html
+++ b/index.html
@@ -11,38 +11,43 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400i|Raleway:700|Roboto&display=swap');
+
         /* Some resets and issue fixes */
         #outlook a {
             padding: 0;
         }
+
         body {
             width: 100% !important;
             padding: 0;
             margin: 0;
             -ms-text-size-adjust: 100%;
-                text-size-adjust: 100%;
+            text-size-adjust: 100%;
             background-color: #EFEDF2;
         }
+
         table td {
             border-collapse: collapse;
             /* outline: 1px dashed red !important; */
         }
+
         a {
             color: #6EE5B9 !important;
             cursor: pointer !important;
         }
+
         @media screen and (max-width: 630px) {
             br {
                 /* display: none !important; */
             }
         }
+
         @media screen and (min-width: 630px) {
             .fixed-width {
                 width: 800px !important;
                 height: auto !important;
             }
         }
-
     </style>
 
 
@@ -93,7 +98,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="youtube" src="http://www.rmu.gallery/js-internal-email/youtube.jpg">
+                            <img width="100%" alt="youtube" src="http://www.rmu.gallery/js-internal-email/youtube2.jpg">
                         </td>
                     </tr>
 
@@ -131,6 +136,21 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
+                        <td align="center" valign="top"
+                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            <span>
+                                Kim Havens joins as <br> VP, Content Production
+                            </span>
+                        </td>
+                    </tr>
+
+                    <!--------------------------------------------------------- Spacer -->
+                    <tr>
+                        <td height="40"></td>
+                    </tr>
+                    <!--------------------------------------------------------- Spacer -->
+
+                    <tr>
                         <td align="center" valign="top">
                             <img width="100%" alt="kim" src="http://www.rmu.gallery/js-internal-email/kim.jpg">
                         </td>
@@ -162,6 +182,21 @@
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
                         <td height="20"></td>
+                    </tr>
+                    <!--------------------------------------------------------- Spacer -->
+
+                    <tr>
+                        <td align="center" valign="top"
+                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            <span>
+                                Much more to come!
+                            </span>
+                        </td>
+                    </tr>
+
+                    <!--------------------------------------------------------- Spacer -->
+                    <tr>
+                        <td height="40"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
