Re-added address footer.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Joystick Internal Email</title>
 
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400i|Raleway:700|Roboto&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Playfair+Display:200i|Raleway:700|Roboto&display=swap');
 
         /* Some resets and issue fixes */
         #outlook a {
@@ -55,7 +55,7 @@
 
 <body style="padding:0; margin:0">
 
-    <table align="center" bgcolor="#FFF" border="0" cellpadding="40" cellspacing="0" width="100%" class="fixed-width">
+    <table align="center" bgcolor="#FFF" border="0" cellpadding="20" cellspacing="0" width="100%" class="fixed-width">
         <tr>
             <td align="center" valign="top">
 
@@ -92,7 +92,7 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
+                        <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
@@ -146,7 +146,7 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
+                        <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
@@ -196,7 +196,7 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
+                        <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
@@ -244,10 +244,38 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="40"></td>
+                        <td height="20"></td>
+                    </tr>
+                    <!--------------------------------------------------------- Spacer -->
+                    <tr>
+                        <td align="center" valign="top">
+                            <span style="font-family: 'Playfair Display', serif; font-size: 2.25em; color: #000000;">
+                                <i>Get in touch,</i>
+                            </span> <br>
+                            <span
+                                style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                                We'd love to hear from you
+                            </span>
+                        </td>
+                    </tr>
+
+                    <!--------------------------------------------------------- Spacer -->
+                    <tr>
+                        <td height="20"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
+                    <tr bgcolor="#19042d">
+                        <td align="center" class="hide" valign="top">
+                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/footer.jpg">
+                        </td>
+                    </tr>
+
+                    <!--------------------------------------------------------- Spacer -->
+                    <tr>
+                        <td height="20"></td>
+                    </tr>
+                    <!--------------------------------------------------------- Spacer -->
                     <tr>
                         <td valign="top"
                             style="font-family: 'Raleway', sans-serif; font-size: 1.5em; font-weight: 700; text-align: center; color: #000000;">
