Increased image quality of footer.

--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
-                    <tr bgcolor="#19042d">
-                        <td align="center" class="hide" valign="top">
-                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/footer.jpg">
+                    <tr>
+                        <td align="center" valign="top">
+                            <img width="100%" alt="footer" src="http://www.rmu.gallery/js-internal-email/footer2.jpg">
                         </td>
                     </tr>
 
@@ -314,7 +314,6 @@
                     </tr>
                 </table>
                 <!-- Footer End -->
-
 
             </td>
         </tr>
