Updated footer to use mobile "stacked" layout.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <!-- Logo -->
                 <table border="0" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td align="center" valign="top" class="mobile-fluid">
+                        <td align="center" valign="top">
                             <img alt="logo" class="mobile-center"
                                 src="http://www.rmu.gallery/js-internal-email/logo.jpg">
                         </td>
@@ -266,8 +266,8 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td align="center" valign="top">
-                            <img width="100%" alt="footer" src="http://www.rmu.gallery/js-internal-email/footer2.jpg">
+                        <td align="center" valign="top" style="background-color: #1c022f;" width>
+                            <img width="100%" alt="footer" src="http://www.rmu.gallery/js-internal-email/footer4.jpg">
                         </td>
                     </tr>
 
