Converted address footer to HTML text.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 
                 <!-- Footer -->
-                <table border="0" cellpadding="0" cellspacing="0">
+                <table border="0" cellpadding="0" cellspacing="0" width="100%">
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
@@ -266,9 +266,79 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f;" width>
-                            <img width="100%" alt="footer" src="http://www.rmu.gallery/js-internal-email/footer4.jpg">
+                        <td height="60" style="background-color: #1c022f;"></td>
+                    </tr>
+
+                    <tr>
+                        <td align="center" valign="top" style="background-color: #1c022f;">
+                            <img alt="logo" src="http://www.rmu.gallery/js-internal-email/logo-white2.png">
                         </td>
+                    </tr>
+
+                    <tr>
+                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
+                                <span style="font-size: 1.5em;">Los Angeles</span> <br>
+                                4551 Glencoe Avenue <br>
+                                Suite 330 <br>
+                                Marina del Rey, CA 90292 <br>
+                                <span style="color: #6EE5B9;">Tel: +(310) 751 4158</span>
+                            </p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
+                                <span style="font-size: 1.5em;">New York</span> <br>
+                                25 Broadway <br>
+                                5th Floor <br>
+                                New York, NY 10004 <br>
+                                <span style="color: #6EE5B9;">Tel: +(646) 602 9727</span>
+                            </p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
+                                <span style="font-size: 1.5em;">London</span> <br>
+                                Suncourt House, Level 3, <br>
+                                18-26 Essex Road, <br>
+                                London N1 8LN <br>
+                                <span style="color: #6EE5B9;">Tel: +44 (0)749 502 2208</span>
+                            </p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
+                                <span style="font-size: 1.5em;">Santo Domingo</span> <br>
+                                Edificio Corporativo <br>
+                                Av. Gustavo Mejia Ricart No. 102 Esq. Ave. <br>
+                                Abraham Lincoln, Suite 303 <br>
+                                Santo Domingo, Dominican Republic <br>
+                                <span style="color: #6EE5B9;">Tel: +(809) 562 6921</span>
+                            </p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
+                                <span style="font-size: 1.5em;">Sydney</span> <br>
+                                Level 4, 100 Harris St, <br>
+                                Pyrmont, <br>
+                                Sydney NSW 2009, <br>
+                                Australia <br>
+                                <span style="color: #6EE5B9;">Tel: +61 433 782 076</span>
+                            </p>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td height="60" style="background-color: #1c022f;"></td>
                     </tr>
 
                     <!--------------------------------------------------------- Spacer -->
