Optimized address footer markup.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
             /* outline: 1px dashed red !important; */
         }
 
-        a {
-            color: #6EE5B9 !important;
-            cursor: pointer !important;
-        }
-
         @media screen and (max-width: 630px) {
             br {
                 /* display: none !important; */
@@ -271,18 +266,18 @@
 
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f;">
-                            <img alt="logo" src="http://www.rmu.gallery/js-internal-email/logo-white2.png">
+                            <img alt="logo" src="http://www.rmu.gallery/js-internal-email/logo-white3.png">
                         </td>
                     </tr>
 
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="font-size: 1.5em;">Los Angeles</span> <br>
-                                4551 Glencoe Avenue <br>
-                                Suite 330 <br>
-                                Marina del Rey, CA 90292 <br>
-                                <span style="color: #6EE5B9;">Tel: +(310) 751 4158</span>
+                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Suite 330</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
+                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +(310) 751 4158</a>
                             </p>
                         </td>
                     </tr>
@@ -290,11 +285,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="font-size: 1.5em;">New York</span> <br>
-                                25 Broadway <br>
-                                5th Floor <br>
-                                New York, NY 10004 <br>
-                                <span style="color: #6EE5B9;">Tel: +(646) 602 9727</span>
+                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;"">New York</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">25 Broadway</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">5th Floor</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">New York, NY 10004</a> <br>
+                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +(646) 602 9727</a>
                             </p>
                         </td>
                     </tr>
@@ -302,11 +297,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="font-size: 1.5em;">London</span> <br>
-                                Suncourt House, Level 3, <br>
-                                18-26 Essex Road, <br>
-                                London N1 8LN <br>
-                                <span style="color: #6EE5B9;">Tel: +44 (0)749 502 2208</span>
+                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">18-26 Essex Road,</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">London N1 8LN</a> <br>
+                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
                             </p>
                         </td>
                     </tr>
@@ -314,12 +309,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="font-size: 1.5em;">Santo Domingo</span> <br>
-                                Edificio Corporativo <br>
-                                Av. Gustavo Mejia Ricart No. 102 Esq. Ave. <br>
-                                Abraham Lincoln, Suite 303 <br>
-                                Santo Domingo, Dominican Republic <br>
-                                <span style="color: #6EE5B9;">Tel: +(809) 562 6921</span>
+                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Edificio Corporativo</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
+                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +(809) 562 6921</a>
                             </p>
                         </td>
                     </tr>
@@ -327,12 +322,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="font-size: 1.5em;">Sydney</span> <br>
-                                Level 4, 100 Harris St, <br>
-                                Pyrmont, <br>
-                                Sydney NSW 2009, <br>
-                                Australia <br>
-                                <span style="color: #6EE5B9;">Tel: +61 433 782 076</span>
+                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Pyrmont,</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
+                                <a href="" style="text-decoration: none; color: #FFFFFF;">Australia</a> <br>
+                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +61 433 782 076</a>
                             </p>
                         </td>
                     </tr>
