Optimized footer markup code.

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f;" width>
+                        <td align="center" valign="top">
                             <img width="100%" alt="footer" src="http://www.rmu.gallery/js-internal-email/footer4.jpg">
                         </td>
                     </tr>
